Update frontend API configuration
## Changes

### Frontend
- Updated API base URL to use local IP address: http://192.168.1.4:3002/api/zhipu
- This allows Vercel-deployed frontend to connect to local backend server

### Backend
- Updated .env file with Zhipu API key
- Ensured backend server is configured for external access

### Deployment
- Ready for Vercel deployment
- Frontend will connect to local backend via local network
- All AI features supported (text, voice, image, video, OCR)

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 # Zhipu AI API Key
-ZHIPU_API_KEY=your_zhipu_api_key_here
+ZHIPU_API_KEY=sk-a75d46768b0f45dc90a5969077ffc8d9.dT0t2tku3hZGfYkk
 
 # Server Configuration
 PORT=3002
